[gd_scene load_steps=15 format=3 uid="uid://b1bymi3u15lwo"]

[ext_resource type="FontFile" uid="uid://cs472trie728e" path="res://Assets/Fonts/JotiOne-Regular.ttf" id="1_we7ir"]
[ext_resource type="Script" uid="uid://tmp5ja6nsy7w" path="res://Assets/Scripts/game_over_screen.gd" id="1_wp64j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wp64j"]
bg_color = Color(0.800414, 0.221856, 0.222369, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.43, 0.1118, 0.1118, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="Theme" id="Theme_5vxfh"]
Panel/styles/panel = SubResource("StyleBoxFlat_wp64j")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vxfh"]
bg_color = Color(0.56, 0.1344, 0.1344, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_we7ir"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wp64j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e05nt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bbc3d"]
bg_color = Color(0.973561, 0.541842, 0.509454, 1)
border_width_left = 9
border_width_top = 9
border_width_right = 9
border_width_bottom = 9
border_color = Color(0.431373, 0.109804, 0.109804, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_00dx5"]
bg_color = Color(0.954384, 0.429892, 0.402605, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.431373, 0.109804, 0.109804, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_274db"]
bg_color = Color(0.954384, 0.429892, 0.402605, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.431373, 0.109804, 0.109804, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_wp64j"]
Button/styles/focus = SubResource("StyleBoxEmpty_e05nt")
Button/styles/hover = SubResource("StyleBoxFlat_bbc3d")
Button/styles/normal = SubResource("StyleBoxFlat_00dx5")
Button/styles/pressed = SubResource("StyleBoxFlat_274db")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e05nt"]
bg_color = Color(0.91411, 0.311573, 0.299328, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.43, 0.1118, 0.1118, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="Theme" id="Theme_bbc3d"]
Panel/styles/panel = SubResource("StyleBoxFlat_e05nt")

[node name="Game Over Screen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -227.5
offset_top = -385.5
offset_right = 227.5
offset_bottom = 385.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_wp64j")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 27.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_5vxfh")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 90
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Panel2" type="Panel" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5vxfh")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/Panel2"]
layout_mode = 2
offset_left = 31.0
offset_right = 364.0
offset_bottom = 620.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/Panel2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 90
theme_override_styles/separator = SubResource("StyleBoxEmpty_we7ir")

[node name="PanelContainer" type="Label" parent="Panel/MarginContainer/Panel2/VBoxContainer"]
custom_minimum_size = Vector2(0, 163.04)
layout_mode = 2
text = "Fool."
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/MarginContainer/Panel2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 208
theme_override_styles/separator = SubResource("StyleBoxEmpty_wp64j")

[node name="Retry" type="Button" parent="Panel/MarginContainer/Panel2/VBoxContainer"]
custom_minimum_size = Vector2(0, 58.74)
layout_mode = 2
size_flags_vertical = 4
theme = SubResource("Theme_wp64j")
theme_override_fonts/font = ExtResource("1_we7ir")
theme_override_font_sizes/font_size = 27
text = "Retry Level"

[node name="Main Menu" type="Button" parent="Panel/MarginContainer/Panel2/VBoxContainer"]
custom_minimum_size = Vector2(0, 58.74)
layout_mode = 2
size_flags_vertical = 4
theme = SubResource("Theme_wp64j")
theme_override_fonts/font = ExtResource("1_we7ir")
theme_override_font_sizes/font_size = 27
text = "Exit to Main Menu"

[node name="GameOverTextPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 25.0
offset_right = -25.0
offset_bottom = 97.0
grow_horizontal = 2
theme = SubResource("Theme_bbc3d")

[node name="Label" type="Label" parent="GameOverTextPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0.431373, 0.109804, 0.109804, 1)
theme_override_constants/outline_size = 34
theme_override_fonts/font = ExtResource("1_we7ir")
theme_override_font_sizes/font_size = 58
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Anim" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="pressed" from="Panel/MarginContainer/Panel2/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="button_down" from="Panel/MarginContainer/Panel2/VBoxContainer/Main Menu" to="." method="_on_main_menu_button_down"]
[connection signal="timeout" from="Anim" to="." method="_on_anim_timeout"]
